other-vpol/unique-ingress-paths/.chainsaw-test/exception-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exception-ingress-ns
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: approved-ingress
  namespace: exception-ingress-ns
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: demo-svc
            port:
              number: 80
