other-vpol/unique-ingress-paths/.chainsaw-test/ingress-bad.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badingress01
  namespace: unique-ingress-paths-ns
spec:
  rules:
  - host: endpoint01
    http:
      paths:
      - backend:
          service:
            name: demo-svc
            port:
              number: 8080
        path: /foo
        pathType: Prefix
      - backend:
          service:
            name: demo-svc
            port:
              number: 8081
        path: /bar/def/bca
        pathType: Prefix
  - host: endpoint02
    http:
      paths:
      - backend:
          service:
            name: demo-svc
            port:
              number: 8080
        path: /bar/abc/bca
        pathType: Prefix
      - backend:
          service:
            name: demo-svc
            port:
              number: 8081
        path: /foo/fed/def
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badingress02
  namespace: unique-ingress-paths-ns
spec:
  rules:
  - host: endpoint01
    http:
      paths:
      - backend:
          service:
            name: demo-svc
            port:
              number: 8080
        path: /foo
        pathType: Prefix
      - backend:
          service:
            name: demo-svc
            port:
              number: 8081
        path: /def/cba/bar
        pathType: Prefix
