other-vpol/unique-ingress-paths/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name:  unique-ingress-path
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
    - reason: Succeeded
      status: "True"
    (conditions[?type == 'WebhookConfigured']):
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
